@@ -1,1 +1,1 @@
-1.8.25.0-rc2
+1.8.25.0
